src/commands/snapshots/backup_rs__commands__run__tests__snapshot_backup_args_sudo.snap
---
source: src/commands/run.rs
expression: "build_backup_args(&make_cli(&[\"--sudo\"]), &make_cfg())"
---
[
    "doas",
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "pw",
    "backup",
    "--set-compression",
    "3",
    "--exclude-if-present",
    "ignore",
    "--glob=!**/.git",
    "--glob=!tmp/",
    "--glob=!**/target/",
    "--glob=!**/node_modules/",
    "/home/alice/project",
]
