src/commands/snapshots/backup_rs__commands__run__tests__snapshot_check_args.snap
---
source: src/commands/run.rs
expression: "build_check_args(&make_cli(&[]), &make_cfg())"
---
[
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "pw",
    "check",
]
