src/commands/snapshots/backup_rs__commands__run__tests__snapshot_compact_args.snap
---
source: src/commands/run.rs
expression: "build_compact_args(&make_cli(&[]), &make_cfg())"
---
[
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "pw",
    "prune",
]
