src/commands/snapshots/backup_rs__commands__run__tests__snapshot_forget_args_custom_retention.snap
---
source: src/commands/run.rs
expression: "build_forget_args(&make_cli(&[]), &cfg)"
---
[
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "pw",
    "forget",
    "--prune",
    "--keep-daily",
    "7",
    "--keep-weekly",
    "4",
    "--keep-monthly",
    "12",
]
