src/commands/snapshots/backup_rs__commands__run__tests__snapshot_forget_args_default.snap
---
source: src/commands/run.rs
expression: "build_forget_args(&make_cli(&[]), &make_cfg())"
---
[
    "rustic",
    "-r",
    "/tmp/repo",
    "--password",
    "pw",
    "forget",
    "--prune",
    "--keep-daily",
    "2",
    "--keep-weekly",
    "1",
    "--keep-monthly",
    "1",
]
