src/commands/snapshots/backup_rs__commands__run__tests__snapshot_mkdir_args.snap
---
source: src/commands/run.rs
expression: "build_mkdir_args(&make_cli(&[]), &make_cfg())"
---
[
    "mkdir",
    "-p",
    "/tmp/repo",
]
