src/commands/snapshots/backup_rs__commands__run__tests__snapshot_mount_args_no_target.snap
---
source: src/commands/run.rs
expression: "build_mount_args(&make_cli(&[]), &cfg)"
---
[
    "mount-nas",
]
